feat: use app container

--- a/packages/stencil-library/src/components/counter-component/counter-component.css
+++ b/packages/stencil-library/src/components/counter-component/counter-component.css
@@ -1,3 +1,19 @@
 :host {
-  display: block;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.counter {
+  display: flex;
+  justify-content: center;
+  width: 40px;
+  background: red;
+  color: #fff;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
